WIP: A bit of cleanup